Fix text align for ios in tables

--- a/client/less/game.less
+++ b/client/less/game.less
@@ -7,6 +7,7 @@
         th {
             padding-right: 10px;
             font-weight: 600;
+            text-align: start;
         }
     }
     .game_title {
